# contract-playground

./: Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  old_u64key_migrate.wasm  u64key_migrate.wasm
contracts/u64key-migrate/: Cargo.toml  README.md
contracts/u64key-migrate/examples/: schema.rs
contracts/u64key-migrate/schema/: count_response.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/u64key-migrate/src/: contract.rs  msg.rs  state.rs
scripts/: build_artifacts.sh
test/: Cargo.toml
test/src/: test.rs
